2008-05-29  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* elf.c (assign_file_positions_for_load_sections): Adjust pre-section
	gaps based on VMA and P_VADDR instead of LMA and P_PADDR addresses.

2008-05-28  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (spu_elf_object_p): New function.
	(elf_backend_object_p): Define.
	(build_stub): Correct second word of 8 byte overlay stubs.
	(spu_elf_relocate_section): Formatting.

2008-05-24  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* elf.c (elfcore_write_register_note): New function.
	* elf-bfd.h (elfcore_write_register_note): New prototype.

2008-05-22  Christophe Lyon  <christophe.lyon@st.com>

	* elf32-arm.c (arm_type_of_stub): Ignore STT_SECTION symbols.
	(elf32_arm_stub_add_mapping_symbol): Remove.
	(elf32_arm_add_stub): Don't generate mapping symbols. Change
	prototype.
	(elf32_arm_size_stubs): Use new elf32_arm_add_stub
	prototype. Don't generate thumb to arm glue for calls.
	(arm_map_one_stub): Define.
	(elf32_arm_output_arch_local_syms): Generate mapping symbols for
	long calls stubs.
	
2008-05-21  Maxim Kuvyrkov  <maxim@codesourcery.com>
	
	Add multi-GOT support for m68k.
	* elf32-m68k.c (struct elf_m68k_link_hash_entry: got_entry_key,
	glist): New fields.
	(struct elf_m68k_got_entry_key, struct elf_m68k_got_entry,
	struct elf_m68k_got, struct elf_m68k_bfd2got_entry,
	struct elf_m68k_multi_got): New data structures.
	(struct elf_m68k_link_hash_table: local_gp_p, use_neg_got_offsets_p,
	allow_multigot_p, multi_got_): New fields.
	(elf_m68k_multi_got): New macro.
	(elf_m68k_link_hash_newfunc): Initialize new fields of
	struct elf_m68k_link_hash_entry.
	(elf_m68k_link_hash_table_create): Initialize new fields of
	struct elf_m68k_link_hash_table.
	(elf_m68k_link_hash_table_free): New static function implementing hook.
	(elf_m68k_init_got, elf_m68k_clear_got, elf_m68k_create_empty_got): New
	static functions for struct elf_m68k_got.	
	(elf_m68k_init_got_entry_key, elf_m68k_got_entry_hash,